Implemented Diffusion Model

--- a/notebooks/play.ipynb
+++ b/notebooks/play.ipynb
@@ -17,22 +17,18 @@
     "import import_ipynb\n",
     "from pathlib import Path\n",
     "\n",
-    "wgan_dir = Path('notebooks')\n",
-    "sys.path.insert(0, str(wgan_dir.resolve()))\n",
+    "dir = Path('notebooks')\n",
+    "sys.path.insert(0, str(dir.resolve()))\n",
     "import wgan\n",
     "import globals\n",
     "import ebm\n",
+    "import ddm\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
     "import os\n",
-    "from PIL import Image\n",
-    "\n",
-    "from torch.utils.tensorboard import SummaryWriter\n",
-    "from datetime import datetime\n",
-    "\n",
-    "import logging"
+    "from PIL import Image\n"
    ]
   },
   {
@@ -113,22 +109,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generator = wgan.Generator()\n",
-    "critic = wgan.Critic()\n",
-    "critic_optimizer = torch.optim.Adam(params = critic.parameters(), lr = globals.LEARNING_RATE_CRITIC, betas = (globals.ADAM_BETA_1, globals.ADAM_BETA_2))\n",
-    "generator_optimizer = torch.optim.Adam(params = generator.parameters(), lr = globals.LEARNING_RATE_GENERATOR, betas = (globals.ADAM_BETA_1, globals.ADAM_BETA_2))\n",
-    "\n",
-    "\n",
-    "wgan = wgan.wgan(generator, critic, globals.Z_DIM, globals.GP_WEIGHT, critic_optimizer, generator_optimizer)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def show_generated_images(generator, epoch, num_images = 1):\n",
     "    with torch.no_grad():\n",
     "        z = torch.randn(size = (num_images, globals.Z_DIM))\n",
@@ -146,7 +126,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ebm = ebm.EBM()"
+    "EBM = True\n",
+    "DDM = False\n",
+    "\n",
+    "if EBM:\n",
+    "    model = ebm.EBM()\n",
+    "elif DDM:\n",
+    "    model = ddm.DiffusionModel()\n",
+    "else:\n",
+    "    generator = wgan.Generator()\n",
+    "    critic = wgan.Critic()\n",
+    "    critic_optimizer = torch.optim.Adam(params = critic.parameters(), lr = 0.0001)\n",
+    "    generator_optimizer = torch.optim.Adam(params = generator.parameters(), lr = 0.0001)\n",
+    "    model = wgan.wgan(generator, critic, critic_optimizer, generator_optimizer )"
    ]
   },
   {
@@ -156,37 +148,15 @@
    "outputs": [],
    "source": [
     "\n",
-    "def train_one_epoch(epoch_index, tb_writer):\n",
-    "    running_loss = 0\n",
-    "    last_loss = 0\n",
-    "\n",
+    "def train_one_epoch():\n",
     "\n",
     "\n",
     "    for i, data in enumerate(trainloader):\n",
-    "\n",
-    "        #critic_optimizer.zero_grad()\n",
-    "        #generator_optimizer.zero_grad()\n",
-    "\n",
-    "        #inputs = data\n",
-    "        loss = ebm(data)\n",
-    "        #c_loss, g_loss, c_gp, c_wass_loss = wgan(inputs)\n",
-    "\n",
     "        print('Batch number {}'.format(i))\n",
-    "        #print('Critical loss is {}'.format(c_loss))\n",
-    "        #print('Generator loss is {}'.format(g_loss))\n",
-    "        #print('Critic GP loss is {}'.format(c_gp))\n",
-    "        #print('C_WASS_LOSS is {}'.format(c_wass_loss))\n",
     "\n",
+    "        loss = model(data)\n",
     "\n",
-    "        #running_loss += c_loss.item()\n",
-    "        #if i % 1000 == 999:\n",
-    "         #   last_loss = running_loss / 1000\n",
-    "          #  print(' batch {} loss: {}'.format(i + 1, last_loss))\n",
-    "           # tb_x = epoch_index * len(trainloader) + i + 1\n",
-    "            #tb_writer.add_scalar('Loss/train', last_loss, tb_x)\n",
-    "            #running_loss = 0\n",
-    "    \n",
-    "    return last_loss\n"
+    "    return loss\n"
    ]
   },
   {
@@ -195,22 +165,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
-    "writer = SummaryWriter('runs/wgan_trainer_{}'.format(timestamp))\n",
     "epoch_number = 0\n",
     "\n",
     "for epoch in range(globals.EPOCHS):\n",
     "    print('EPOCH {}'.format(epoch_number + 1))\n",
     "\n",
-    "    ebm.train(True)\n",
-    "    #wgan.train(True)\n",
-    "    avg_loss = train_one_epoch(epoch_number, writer)\n",
-    "    #show_generated_images(generator,epoch)\n",
+    "    model.train(True)\n",
+    "    avg_loss = train_one_epoch()\n",
     "\n",
-    "    running_loss = 0.0\n",
     "\n",
-    "    ebm.eval()\n",
-    "    #wgan.eval()\n",
+    "    model.eval()\n",
     "    epoch_number += 1"
    ]
   }
