--- a/notebooks/wgan.ipynb
+++ b/notebooks/wgan.ipynb
@@ -33,6 +33,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "CRITIC_STEP = 1\n",
+    "Z_DIM = 512\n",
+    "LEARNING_RATE_CRITIC = 0.0001\n",
+    "LEARNING_RATE_GENERATOR = 0.0001\n",
+    "ADAM_BETA_1 = 0.5\n",
+    "ADAM_BETA_2 = 0.999\n",
+    "GP_WEIGHT = 25.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Critic\n",
     "\n",
     "class Critic(nn.Module):\n",
@@ -84,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +108,7 @@
     "class Generator(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Generator, self).__init__()\n",
-    "        self.conv2dtranspose1 = nn.ConvTranspose2d(in_channels = globals.Z_DIM, out_channels = 512, kernel_size = 4, stride = 2, padding = 0, bias = False)\n",
+    "        self.conv2dtranspose1 = nn.ConvTranspose2d(in_channels = Z_DIM, out_channels = 512, kernel_size = 4, stride = 2, padding = 0, bias = False)\n",
     "        self.conv2dtranspose2 = nn.ConvTranspose2d(in_channels = 512, out_channels = 256, kernel_size = 4, stride = 2, padding = 1, bias = False)\n",
     "        self.conv2dtranspose3 = nn.ConvTranspose2d(in_channels = 256, out_channels = 128, kernel_size = 4, stride = 2, padding = 1, bias = False)\n",
     "        self.conv2dtranspose4 = nn.ConvTranspose2d(in_channels = 128, out_channels = 64, kernel_size = 4, stride = 2, padding = 1, bias = False)\n",
@@ -112,7 +127,7 @@
     "    \n",
     "    def forward(self, latent_space):\n",
     "        batch_size = latent_space.shape[0]\n",
-    "        x = torch.reshape(input = latent_space, shape = (batch_size, globals.Z_DIM, 1, 1))\n",
+    "        x = torch.reshape(input = latent_space, shape = (batch_size, Z_DIM, 1, 1))\n",
     "\n",
     "        x = self.conv2dtranspose1(x)\n",
     "        x = nn.BatchNorm2d(x.shape[1])(x)\n",
@@ -140,19 +155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Class WGAN\n",
     "\n",
     "class wgan(nn.Module):\n",
-    "    def __init__(self, generator, critic, latent_dim, gp_weight, critic_optimizer, generator_optimizer):\n",
+    "    def __init__(self, generator, critic, critic_optimizer, generator_optimizer):\n",
     "        super(wgan, self).__init__()\n",
     "        self.generator = generator\n",
     "        self.critic = critic\n",
-    "        self.latent_dim = latent_dim\n",
-    "        self.gp_weight = gp_weight\n",
+    "        self.latent_dim = Z_DIM\n",
+    "        self.gp_weight = GP_WEIGHT\n",
     "        self.critic_opt = critic_optimizer\n",
     "        self.generator_opt = generator_optimizer\n",
     "        self.scheduler_critic = torch.optim.lr_scheduler.StepLR(self.critic_opt , step_size = globals.EPOCHS, gamma = 0.999)\n",
@@ -190,7 +205,7 @@
     "        batch_size = real_images.shape[0]\n",
     "\n",
     "\n",
-    "        for i in range(globals.CRITIC_STEP):\n",
+    "        for i in range(CRITIC_STEP):\n",
     "            self.critic_opt.zero_grad()\n",
     "\n",
     "            random_latent_vectors = torch.randn(size = (batch_size, self.latent_dim))\n",
@@ -220,6 +235,13 @@
     "        g_loss.backward()\n",
     "        self.generator_opt.step()\n",
     "        self.scheduler_critic.step()\n",
+    "\n",
+    "        print('c_loss is  {}'.format(c_loss))\n",
+    "        print('g_loss is  {}'.format(g_loss))\n",
+    "        print('c_gp is  {}'.format(c_gp))\n",
+    "        print('c_wass_loss is  {}'.format(c_wass_loss))\n",
+    "\n",
+    "\n",
     "\n",
     "        return (c_loss, g_loss, c_gp, c_wass_loss)\n",
     "    \n"
